--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -13,5 +14,6 @@
   <![endif]-->
 </head>
   <body>
+    <script src="jquery.js"></script>
   </body>
 </html>
